syntax = "proto3";

package blockscout.interchainIndexer.v1;

option go_package = "github.com/blockscout/blockscout-rs/interchain-indexer";

import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "convert/convert_options.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Interchain Indexer service"
    version: "0.1.1"
    contact: {
      name: "Blockscout"
      url: "https://blockscout.com"
      email: "support@blockscout.com"
    }
  }
  host: "interchain-indexer.services.blockscout.com"
  schemes: [HTTPS]
  external_docs: {
    url: "https://github.com/blockscout/blockscout-rs"
    description: "More about blockscout microservices"
  }
  security_definitions: {
    security: {
      key: "ApiKeyAuth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "x-api-key"
      }
    }
  }
};



service InterchainService {
  rpc InterchainServiceCreate(InterchainServiceCreateRequest) returns (InterchainServiceCreateResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {key: "ApiKeyAuth"}
      }
    };
  }
  rpc InterchainServiceSearch(InterchainServiceSearchRequest) returns (InterchainServiceSearchResponse) {}
  
}

message Item {
  string id = 1;
  string name = 2;
}

message InterchainServiceCreateRequest {
  string foo = 1;
  optional string bar = 2;
  int64 timestamp = 3;
  map<string, string> map = 4;
  optional string url = 5 [(convert_options.convert) = {type: "Option<url::Url>"}];
}

message InterchainServiceCreateResponse {
  Item item = 1;
}



message InterchainServiceSearchRequest {
  string filter_1 = 1;
  string filter_2 = 2;
  string filter_3 = 3;
}

message InterchainServiceSearchResponse {
  repeated Item items = 1;
}



